--- a/arrays_plugin/arrays-card.html
+++ b/arrays_plugin/arrays-card.html
@@ -1,20 +1,3 @@
-<!--
-@license
-Copyright 2017 The TensorFlow Authors. All Rights Reserved.
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
--->
-
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../tf-backend/tf-backend.html">
@@ -22,17 +5,9 @@ limitations under the License.
 <link rel="import" href="../tf-color-scale/tf-color-scale.html">
 <link rel="import" href="../tf-imports/lodash.html">
 
-<!--
-  greeter-card loads greeting data from the greeter_plugin backend, and renders it.
--->
-<dom-module id="greeter-card">
+
+<dom-module id="arrays-card">
   <template>
-    <tf-card-heading title="[[tag]]" color="[[_runColor]]">
-      [[run]]
-    </tf-card-heading>
-    <template is="dom-repeat" items="[[greetings]]">
-      <div>[[item.text]]</div>
-    </template>
     <style>
       :host {
         display: flex;
@@ -46,14 +21,37 @@ limitations under the License.
         width: 700px;
         height: 500px;
       }
-
     </style>
+    <tf-card-heading title="[[tag]]" color="[[_runColor]]">
+      [[run]]
+    </tf-card-heading>
+    <div>
+      Array Display [[step]]
+    </div>
+    <div>
+      <paper-slider
+        pin
+        id="slider"
+        min="0"
+        max="100"
+        type="number"
+        value="{{step}}"
+      ></paper-slider>
+      <paper-input
+        label="Rows"
+        always-float-label
+        placeholder="e.g. :4, 5:7, -2:"
+        auto-validate pattern="[a-zA-Z]*"
+        error-message="invalid format"
+      ></paper-input>
+
+    </div>
   </template>
   <script>
     "use strict";
 
     Polymer({
-      is: "greeter-card",
+      is: "arrays-card",
       properties: {
         run: String,
         tag: String,
@@ -95,13 +93,15 @@ limitations under the License.
         }
         this._canceller.cancelAll();
         const url = tf_backend.addParams(
-          tf_backend.getRouter().pluginRoute('greeter', '/greetings'), {tag, run});
+          tf_backend.getRouter().pluginRoute('arrays', '/arrays'),
+          {tag, run}
+        );
         const updateData = this._canceller.cancellable(result => {
           if (result.cancelled) {
             return;
           }
           const backendData = result.value;
-          this.greetings = backendData;
+          this.arrays = backendData;
         });
         this.requestManager.request(url).then(updateData);
       },
