Clean up file structure

--- a/arrays_plugin/arrays_dashboard/arrays-dashboard.html
+++ b/arrays_plugin/arrays_dashboard/arrays-dashboard.html
@@ -12,16 +12,16 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
-<link rel="import" href="../iron-icon/iron-icon.html">
-<link rel="import" href="../paper-input/paper-input.html">
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../tf-backend/tf-backend.html">
-<link rel="import" href="../tf-categorization-utils/tf-categorization-utils.html">
-<link rel="import" href="../tf-categorization-utils/tf-category-pane.html">
-<link rel="import" href="../tf-dashboard-common/dashboard-style.html">
-<link rel="import" href="../tf-dashboard-common/tf-dashboard-layout.html">
-<link rel="import" href="../tf-runs-selector/tf-runs-selector.html">
-<link rel="import" href="../tf-tensorboard/registry.html">
+<link rel="import" href="../../iron-icon/iron-icon.html">
+<link rel="import" href="../../paper-input/paper-input.html">
+<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../tf-backend/tf-backend.html">
+<link rel="import" href="../../tf-categorization-utils/tf-categorization-utils.html">
+<link rel="import" href="../../tf-categorization-utils/tf-category-pane.html">
+<link rel="import" href="../../tf-dashboard-common/dashboard-style.html">
+<link rel="import" href="../../tf-dashboard-common/tf-dashboard-layout.html">
+<link rel="import" href="../../tf-runs-selector/tf-runs-selector.html">
+<link rel="import" href="../../tf-tensorboard/registry.html">
 <link rel="import" href="arrays-card.html">
 
 <!--
