--- a/arrays_plugin/arrays_dashboard/arrays-plugin.html
+++ b/arrays_plugin/arrays_dashboard/arrays-plugin.html
@@ -1,8 +1,8 @@
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../tf-backend/tf-backend.html">
-<link rel="import" href="../tf-dashboard-common/dashboard-style.html">
-<link rel="import" href="../tf-dashboard-common/tf-dashboard-layout.html">
-<link rel="import" href="../tf-runs-selector/tf-runs-selector.html">
+<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../tf-backend/tf-backend.html">
+<link rel="import" href="../../tf-dashboard-common/dashboard-style.html">
+<link rel="import" href="../../tf-dashboard-common/tf-dashboard-layout.html">
+<link rel="import" href="../../tf-runs-selector/tf-runs-selector.html">
 
 <!--
 An example web component that shows up as the content for a TensorBoard tab.
