--- a/arrays_plugin/arrays_dashboard/arrays-card.html
+++ b/arrays_plugin/arrays_dashboard/arrays-card.html
@@ -1,9 +1,9 @@
-<link rel="import" href="../paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../tf-backend/tf-backend.html">
-<link rel="import" href="../tf-card-heading/tf-card-heading.html">
-<link rel="import" href="../tf-color-scale/tf-color-scale.html">
-<link rel="import" href="../tf-imports/lodash.html">
+<link rel="import" href="../../paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../tf-backend/tf-backend.html">
+<link rel="import" href="../../tf-card-heading/tf-card-heading.html">
+<link rel="import" href="../../tf-color-scale/tf-color-scale.html">
+<link rel="import" href="../../tf-imports/lodash.html">
 
 
 <dom-module id="arrays-card">
