--- a/arrays_plugin/arrays_dashboard/arrays-dashboard.html
+++ b/arrays_plugin/arrays_dashboard/arrays-dashboard.html
@@ -1,17 +1,3 @@
-<!--
-@license
-Copyright 2016 The TensorFlow Authors. All Rights Reserved.
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-    http://www.apache.org/licenses/LICENSE-2.0
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
--->
-
 <link rel="import" href="../../iron-icon/iron-icon.html">
 <link rel="import" href="../../paper-input/paper-input.html">
 <link rel="import" href="../../polymer/polymer.html">
@@ -65,7 +51,7 @@ limitations under the License.
                           run="[[item.run]]"
                           tag="[[item.tag]]"
                           request-manager="[[_requestManager]]"
-                          ></arrays-card>
+                        ></arrays-card>
                       </template>
                     </div>
                   </template>
@@ -101,8 +87,7 @@ limitations under the License.
         },
         _categories: {
           type: Array,
-          computed:
-            '_makeCategories(_runToTag, _selectedRuns, _tagFilter)',
+          computed: '_makeCategories(_runToTag, _selectedRuns, _tagFilter)',
         },
         _requestManager: {
           type: Object,
@@ -135,7 +120,9 @@ limitations under the License.
         });
       },
       _makeCategories(runToTag, selectedRuns, tagFilter) {
-        return tf_categorization_utils.categorizeRunTagCombinations(runToTag, selectedRuns, tagFilter);
+        return tf_categorization_utils.categorizeRunTagCombinations(
+          runToTag, selectedRuns, tagFilter
+        );
       },
     });
 
@@ -143,6 +130,5 @@ limitations under the License.
       plugin: 'arrays',
       elementName: 'arrays-dashboard',
     });
-
   </script>
 </dom-module>
