--- a/arrays_plugin/arrays_dashboard/arrays-card.html
+++ b/arrays_plugin/arrays_dashboard/arrays-card.html
@@ -4,17 +4,15 @@
 <link rel="import" href="../../tf-card-heading/tf-card-heading.html">
 <link rel="import" href="../../tf-color-scale/tf-color-scale.html">
 <link rel="import" href="../../tf-imports/lodash.html">
-<link rel="import" href="arrays-data-loader.html">
+<link rel="import" href="vz-rectangle-plot.html">
 
 
 <dom-module id="arrays-card">
   <template>
     <tf-card-heading title="[[tag]]" run="[[run]]" color="[[_runColor]]">
     </tf-card-heading>
-    <div id="arrays-data-loader-container">
-      <arrays-data-loader
-        active="[[active]]"
-      >[ARRAY DATA]</arrays-data-loader>
+    <div id="rectangle-plot-container">
+      <vz-rectangle-plot data="[[this.array]]"></vz-rectangle-plot>
     </div>
     <div id="options">
       <div id="step-label">Step</div>
@@ -106,10 +104,6 @@
 
       observers: ["_fetchNewData(run, tag)"],
 
-      _computeRunColor(run) {
-        return this._colorScaleFunction(run);
-      },
-
       attached() {
         // Defer reloading until after we're attached, because that ensures that
         // the requestManager has been set from above. (Polymer is tricky
@@ -136,9 +130,13 @@
             return;
           }
           const backendData = result.value;
-          this.arrays = backendData;
+          this.array = backendData;
         });
         this.requestManager.request(url).then(updateData);
+      },
+
+      _computeRunColor(run) {
+        return this._colorScaleFunction(run);
       },
     });
   </script>
