--- a/arrays_plugin/arrays_dashboard/vz-rectangle-plot.html
+++ b/arrays_plugin/arrays_dashboard/vz-rectangle-plot.html
@@ -5,7 +5,7 @@
 <link rel="import" href="../../vz-chart-helpers/vz-chart-helpers.html">
 
 
-<dom-module id="vz-array-plot">
+<dom-module id="vz-rectangle-plot">
   <template>
     <div id="tooltip">
       <table>
