Rename "Arrays" plugin to "Matrices"

--- a/matrices_plugin/matrices_dashboard/vz-matrix-plot.html
+++ b/matrices_plugin/matrices_dashboard/vz-matrix-plot.html
@@ -5,7 +5,7 @@
 <link rel="import" href="../../vz-chart-helpers/vz-chart-helpers.html">
 
 
-<dom-module id="vz-rectangle-plot">
+<dom-module id="vz-matrix-plot">
   <template>
     <div id="tooltip">
       <table>
@@ -86,5 +86,5 @@
       }
     </style>
   </template>
-  <script src="vz-rectangle-plot.js"></script>
+  <script src="vz-matrix-plot.js"></script>
 </dom-module>
