--- a/matrices_plugin/matrices_dashboard/matrices-card.html
+++ b/matrices_plugin/matrices_dashboard/matrices-card.html
@@ -5,20 +5,20 @@
 <link rel="import" href="../../tf-color-scale/tf-color-scale.html">
 <link rel="import" href="../../tf-imports/lodash.html">
 <link rel="import" href="../../tf-imports/plottable.html">
-<link rel="import" href="vz-rectangle-plot.html">
+<link rel="import" href="vz-matrix-plot.html">
 
 
-<dom-module id="arrays-card">
+<dom-module id="matrices-card">
   <template>
     <tf-card-heading
       title="[[tag]]"
       run="[[run]]"
       color="[[_runColor]]"
     ></tf-card-heading>
-    <vz-rectangle-plot
-      data="[[_arrayData]]"
+    <vz-matrix-plot
+      data="[[_matrixData]]"
       color="[[_runColor]]"
-    ></vz-rectangle-plot>
+    ></vz-matrix-plot>
     <div id="options">
       <paper-input
         label="Rows"
@@ -27,7 +27,7 @@
         auto-validate pattern="^\s*([0-9]+|[0-9]+\s*:\s*[0-9]+)\s*(,\s*([0-9]+|[0-9]+\s*:\s*[0-9]+)\s*)*$"
         error-message="invalid format"
         value="{{rowIndices}}"
-        on-change="_updateArray"
+        on-change="_updateMatrix"
       ></paper-input>
       <div style="width: 20px"></div>
       <paper-input
@@ -37,7 +37,7 @@
         auto-validate pattern="^\s*([0-9]+|[0-9]+\s*:\s*[0-9]+)\s*(,\s*([0-9]+|[0-9]+\s*:\s*[0-9]+)\s*)*$"
         error-message="invalid format"
         value="{{colIndices}}"
-        on-change="_updateArray"
+        on-change="_updateMatrix"
       ></paper-input>
       <template is="dom-if" if="{{_multipleSteps}}">
         <div id="step-label">Step</div>
@@ -71,7 +71,7 @@
         margin-bottom: 10px;
       }
 
-      vz-rectangle-plot {
+      vz-matrix-plot {
         height: 360px;
         width: 100%;
       }
@@ -113,7 +113,7 @@
     "use strict";
 
     Polymer({
-      is: "arrays-card",
+      is: "matrices-card",
 
       properties: {
         run: String,
@@ -135,7 +135,7 @@
         rowIndices: String,
         colIndices: String,
         _data: Object,
-        _arrayData: Object,
+        _matrixData: Object,
         _colorScaleFunction: {
           type: Object,  // function: string => string
           value: () => tf_color_scale.runsColorScale,
@@ -153,7 +153,7 @@
 
       observers: [
         "_fetchNewData(run, tag)",
-        "_updateArray(step, _immediateStep)",
+        "_updateMatrix(step, _immediateStep)",
       ],
 
       ready() {
@@ -179,7 +179,7 @@
         }
         this._canceller.cancelAll();
         const url = tf_backend.addParams(
-          tf_backend.getRouter().pluginRoute('arrays', '/arrays'),
+          tf_backend.getRouter().pluginRoute('matrices', '/matrices'),
           {tag, run}
         );
         const updateData = this._canceller.cancellable(result => {
@@ -192,7 +192,7 @@
           this._multipleSteps = backendData.length > 1;
           if (!this._multipleSteps) {
             this._data = backendData;
-            this._updateArray();
+            this._updateMatrix();
             return;
           }
 
@@ -207,41 +207,41 @@
           // this.minStep = minStep;
           this.maxStep = maxStep;
           this._data = backendData;
-          this._updateArray();
+          this._updateMatrix();
         });
         this.requestManager.request(url).then(updateData);
       },
 
-      _updateArray() {  // using properties instead of params in case they update
+      _updateMatrix() {  // using properties instead of params in case they update
         if (!this._data) {
           return;
         }
 
         let step = this._immediateStep ? this._immediateStep : this.step;
 
-        // Fetch array at correct time step
-        let array = this._data[0].array;
+        // Fetch matrix at correct time step
+        let matrix = this._data[0].matrix;
         for (const d of this._data) {
-          if (d.step === step) array = d.array;
+          if (d.step === step) matrix = d.matrix;
         }
 
         // Compute indices to show
         const rows = this._parseIndexPattern(this.rowIndices);
         const cols = this._parseIndexPattern(this.colIndices);
 
-        // Slice array and convert into required data format
-        const arrayData = [];
-        for (let i = 0; i < array.length; i++) {
-          for (let j = 0; j < array[0].length; j++) {
+        // Slice matrix and convert into required data format
+        const matrixData = [];
+        for (let i = 0; i < matrix.length; i++) {
+          for (let j = 0; j < matrix[0].length; j++) {
             if ((rows.size === 0 || rows.has(j)) &&
                 (cols.size === 0 || cols.has(i))) {
-              arrayData.push({"x": i, "y": j, "val": array[i][j]});
+              matrixData.push({"x": i, "y": j, "val": matrix[i][j]});
             }
           }
         }
 
-        if (arrayData) {
-          this._arrayData = arrayData;
+        if (matrixData) {
+          this._matrixData = matrixData;
         }
       },
 
@@ -275,10 +275,6 @@
           }
         }
         return indices;
-      },
-
-      _onSliderChange() {
-        console.log("Change callback");
       },
     });
   </script>
