--- a/matrices_plugin/matrices_dashboard/matrices-dashboard.html
+++ b/matrices_plugin/matrices_dashboard/matrices-dashboard.html
@@ -8,12 +8,12 @@
 <link rel="import" href="../../tf-dashboard-common/tf-dashboard-layout.html">
 <link rel="import" href="../../tf-runs-selector/tf-runs-selector.html">
 <link rel="import" href="../../tf-tensorboard/registry.html">
-<link rel="import" href="arrays-card.html">
+<link rel="import" href="matrices-card.html">
 
 <!--
-  A frontend that displays a set of array-cards.
+  A frontend that displays a set of matrices-cards.
 -->
-<dom-module id="arrays-dashboard">
+<dom-module id="matrices-dashboard">
   <template>
     <tf-dashboard-layout>
       <div class="sidebar">
@@ -25,7 +25,7 @@
       <div class="center">
         <template is="dom-if" if="[[_dataNotFound]]">
           <div class="no-data-warning">
-            <h3>No array data was found.</h3>
+            <h3>No matrix data was found.</h3>
           </div>
         </template>
         <template is="dom-if" if="[[!_dataNotFound]]">
@@ -47,11 +47,11 @@
                   <template is="dom-if" if="[[page.active]]">
                     <div class="layout horizontal wrap">
                       <template is="dom-repeat" items="[[page.items]]">
-                        <arrays-card
+                        <matrices-card
                           run="[[item.run]]"
                           tag="[[item.tag]]"
                           request-manager="[[_requestManager]]"
-                        ></arrays-card>
+                        ></matrices-card>
                       </template>
                     </div>
                   </template>
@@ -76,7 +76,7 @@
     "use strict";
 
     Polymer({
-      is: "arrays-dashboard",
+      is: "matrices-dashboard",
       properties: {
         _selectedRuns: Array,
         _runToTag: Object,  // map<run: string, tags: string[]>
@@ -103,7 +103,7 @@
         });
       },
       _fetchTags() {
-        const url = tf_backend.getRouter().pluginRoute('arrays', '/tags');
+        const url = tf_backend.getRouter().pluginRoute('matrices', '/tags');
         return this._requestManager.request(url).then(runToTag => {
           if (_.isEqual(runToTag, this._runToTag)) {
             // No need to update anything if there are no changes.
@@ -115,7 +115,7 @@
         });
       },
       _reloadCards() {
-        this.querySelectorAll('arrays-card').forEach(g => {
+        this.querySelectorAll('matrices-card').forEach(g => {
           g.reload();
         });
       },
@@ -127,8 +127,8 @@
     });
 
     tf_tensorboard.registerDashboard({
-      plugin: 'arrays',
-      elementName: 'arrays-dashboard',
+      plugin: 'matrices',
+      elementName: 'matrices-dashboard',
     });
   </script>
 </dom-module>
