--- a/matrices_plugin/matrices_dashboard/matrices-card.html
+++ b/matrices_plugin/matrices_dashboard/matrices-card.html
@@ -49,7 +49,7 @@
           min="{{minStep}}"
           max="{{maxStep}}"
           value="{{step}}"
-          immediate-value="{{_immediateStep}}"
+          <!-- immediate-value="{{_immediateStep}}" -->
         ></paper-slider>
       </template>
     </div>
