Remove default value for tag filter

--- a/matrices_plugin/matrices_dashboard/matrices-dashboard.html
+++ b/matrices_plugin/matrices_dashboard/matrices-dashboard.html
@@ -83,7 +83,7 @@
         _dataNotFound: Boolean,
         _tagFilter: {
           type: String,  // upward bound from paper-input
-          value: '.*',
+          value: '',
         },
         _categories: {
           type: Array,
